# FastXOR

./: CMakeLists.txt  README.md
app/TestFastXOR/: TestFastXOR.cpp
include/: Timer.h
src/: FastXOR.cpp
